Progress on classes and tech

--- a/techniques/spell-techniques/vitalism/vitalism-2/circle-of-sealing.html
+++ b/techniques/spell-techniques/vitalism/vitalism-2/circle-of-sealing.html
@@ -24,11 +24,11 @@ One Minute Cast Time, <a data-href="Limited" href="core-rules,-how-to-play/recha
 <tbody>
 <tr>
 <td dir="ltr">Range</td>
-<td dir="ltr">Rea</td>
+<td dir="ltr">Reach</td>
 </tr>
 <tr>
-<td dir="ltr">Target/Are One Defeated or Willing Fiend ed</td>
-<td dir="auto"></td>
+<td dir="ltr">Target/Area</td>
+<td dir="ltr">One Defeated or Willing Fiend</td>
 </tr>
 <tr>
 <td dir="ltr">Save</td>
